@@ -2,7 +2,7 @@
 #
 # Home page: http://smartmontools.sourceforge.net
 #
-# $Id: Makefile,v 1.34 2002/11/07 11:28:17 ballen4705 Exp $
+# $Id: Makefile,v 1.35 2002/11/07 19:07:20 ballen4705 Exp $
 #
 # Copyright (C) 2002 Bruce Allen <smartmontools-support@lists.sourceforge.net>
 # 
@@ -133,6 +133,4 @@ release:
 	mv /usr/src/redhat/RPMS/i386/$(pkgname)*.rpm .
 	mv /usr/src/redhat/SRPMS/$(pkgname)*rpm .
 	rm -f /usr/src/redhat/SOURCES/$(pkgname).tar.gz
-	. cvs-script && cvs commit -m "release $(counter)"
-	. cvs-script && cvs tag -d "RELEASE_5_0_$(counter)" && cvs tag "RELEASE_5_0_$(counter)"
 	echo `hostname` | grep -q ballen && echo $(newcounter) > VERSION && chown ballen.ballen *
