@@ -1,6 +1,6 @@
 CHANGELOG for smartmontools
 
-$Id: CHANGELOG,v 1.38 2002/11/07 11:28:17 ballen4705 Exp $
+$Id: CHANGELOG,v 1.39 2002/11/07 19:07:20 ballen4705 Exp $
 
 Copyright (C) 2002 Bruce Allen <smartmontools-support@lists.sourceforge.net>
 
@@ -24,6 +24,11 @@ California, Santa Cruz. http://ssrc.soe.ucsc.edu/
 NOTES FOR FUTURE RELEASES: see TODO file.
 
 CURRENT RELEASE (see VERSION file in this directory):
+
+  smartctl: Missing ANSI prototype in failuretest(); fixed.
+
+  smartctl: Checksum warnings now printed on stdout, or are silent,
+  depending upon -q and -Q settings.
 
 smartmontools-5.0.31
 
